--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ScaleConf.Tech</title>
-		<meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
+		<meta name="description" content="Scaleconf tech">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" media="screen" href="css/main.css">
 	</head>
 	<body>
 		<div id="particles-js"></div>
 
-		<script src="js/particles.js"></script>
+		<script src="js/particles.min.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
