--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<link rel="stylesheet" media="screen" href="css/main.css">
 	</head>
 	<body>
-		<div id="particles-js"></div>
-
+		<div id="particles-js">
+		</div>
 		<script src="js/particles.min.js"></script>
 		<script src="js/main.js"></script>
 	</body>
