Add materialize and add the info of each ScaleConf

--- a/index.html
+++ b/index.html
@@ -5,12 +5,111 @@
 		<title>ScaleConf.Tech</title>
 		<meta name="description" content="Scaleconf tech">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="stylesheet" media="screen" href="css/main.css">
+		<link rel="stylesheet" media="screen, projection" href="css/materialize.min.css">
+	  	<link rel="stylesheet" href="css/font-awesome.min.css">
+	  	<link rel="stylesheet" media="screen" href="css/main.css">
 	</head>
 	<body>
 		<div id="particles-js">
+			<div class="container">
+				<div class="row">
+					<div class="col s12 m4">
+						<div class="card hoverable">
+							<div class="card-image waves-effect waves-block waves-light">
+								<img class="activator" src="images/colombia.png">
+							</div>
+							<div class="card-content">
+								<span class="card-title activator grey-text text-darken-4">
+									<span>Colombia</span>
+									<a class="btn-floating waves-effect waves-light teal right">
+										<i class="fa fa-plus" aria-hidden="true"></i>
+									</a>
+								</span>
+								<p class="socials">
+									<a href="http://scaleconfco.com/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
+									<a href="https://twitter.com/scaleconfco"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
+									<a href="https://facebook.com/scaleconfco"><i class="fa fa-facebook teal-text" aria-hidden="true"></i></a>
+								</p>
+							</div>
+							<div class="card-reveal">
+								<span class="card-title grey-text text-darken-4">
+									<span>Colombia</span>
+									<a class="btn-floating waves-effect waves-light teal right">
+										<i class="fa fa-times" aria-hidden="true"></i>
+									</a>
+								</span>
+								<p>Created by a team of active members of the sotfware community in Colombia, ScaleConf Colombia is a pioneering tech conference on scalability, DevOps and modern software tools and practices in the region.</p>
+								<p>Our main objetive is to level up the community's knowledge, by bringing great speakers from the teams that are paving the way for a global scale in tomorrow's apps and services.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col s12 m4">
+						<div class="card hoverable">
+							<div class="card-image waves-effect waves-block waves-light">
+								<img class="activator" src="images/south_africa.png">
+							</div>
+							<div class="card-content">
+								<span class="card-title activator grey-text text-darken-4">
+									<span>South Africa</span>
+									<a class="btn-floating waves-effect waves-light teal right">
+										<i class="fa fa-plus" aria-hidden="true"></i>
+									</a>
+								</span>
+								<p class="socials">
+									<a href="http://scaleconf.org/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
+									<a href="https://twitter.com/scaleconf"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
+									<a href="https://www.facebook.com/scaleconf"><i class="fa fa-facebook teal-text" aria-hidden="true"></i></a>
+								</p>
+							</div>
+							<div class="card-reveal">
+								<span class="card-title grey-text text-darken-4">
+									<span>South Africa</span>
+									<a class="btn-floating waves-effect waves-light teal right">
+										<i class="fa fa-times" aria-hidden="true"></i>
+									</a>
+								</span>
+								<p>Each year ScaleConf brings international and local experts together to share their experience scaling websites and services using modern technologies and philosophies.</p>
+								<p>With a mixture of South African and international speakers, each year we bring a diversity of experience and perspective to the stage.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col s12 m4">
+						<div class="card hoverable">
+							<div class="card-image waves-effect waves-block waves-light">
+								<img class="activator" src="images/new_zealand.png">
+							</div>
+							<div class="card-content">
+								<span class="card-title activator grey-text text-darken-4">
+									<span>New Zealand</span>
+									<a class="btn-floating waves-effect waves-light teal right">
+										<i class="fa fa-plus" aria-hidden="true"></i>
+									</a>
+								</span>
+								<p class="socials">
+									<a href="http://scaleconf.co.nz/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
+									<a href="https://twitter.com/sconfnz"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
+									<a href="https://www.facebook.com/scaleconfNZ/"><i class="fa fa-facebook teal-text" aria-hidden="true"></i></a>
+								</p>
+							</div>
+							<div class="card-reveal">
+								<span class="card-title grey-text text-darken-4">
+									<span>New Zealand</span>
+									<a class="btn-floating waves-effect waves-light teal right">
+										<i class="fa fa-times" aria-hidden="true"></i>
+									</a>
+								</span>
+								<p>ScaleConf New Zealand is an international technical conference for those who build or maintain web systems. Audience includes developers, engineers and managers from companies of all sizes, researchers, academics, influential business decision makers, CTOs and VPs engaged in the web development and performance ecosystem.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
+
+		<!-- Le Javascript -->
+		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script src="js/particles.min.js"></script>
+		<script src="js/materialize.min.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
