--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="particles-js">
 			<div class="container">
 				<div class="row">
-					<div class="col s12 m4">
+					<div class="col s12 m3">
 						<div class="card hoverable">
 							<div class="card-image waves-effect waves-block waves-light">
 								<img class="activator" src="images/colombia.png">
@@ -43,7 +43,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col s12 m4">
+					<div class="col s12 m3">
 						<div class="card hoverable">
 							<div class="card-image waves-effect waves-block waves-light">
 								<img class="activator" src="images/south_africa.png">
@@ -73,7 +73,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col s12 m4">
+					<div class="col s12 m3">
 						<div class="card hoverable">
 							<div class="card-image waves-effect waves-block waves-light">
 								<img class="activator" src="images/new_zealand.png">
@@ -99,6 +99,38 @@
 									</a>
 								</span>
 								<p>ScaleConf New Zealand is an international technical conference for those who build or maintain web systems. Audience includes developers, engineers and managers from companies of all sizes, researchers, academics, influential business decision makers, CTOs and VPs engaged in the web development and performance ecosystem.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col s12 m3">
+						<div class="card hoverable">
+							<div class="card-image waves-effect waves-block waves-light">
+								<img class="activator" src="images/dot.png">
+							</div>
+							<div class="card-content">
+								<span class="card-title activator grey-text text-darken-4">
+									<span>DotScale</span>
+									<a class="btn-floating waves-effect waves-light teal right">
+										<i class="fa fa-plus" aria-hidden="true"></i>
+									</a>
+								</span>
+								<p class="socials">
+									<a href="https://www.dotscale.io/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
+									<a href="https://twitter.com/dotScale"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
+								</p>
+							</div>
+							<div class="card-reveal">
+								<span class="card-title grey-text text-darken-4">
+									<span>DotScale</span>
+									<a class="btn-floating waves-effect waves-light teal right">
+										<i class="fa fa-times" aria-hidden="true"></i>
+									</a>
+								</span>
+								<p>The European Tech Conference on Scalability.</p>
+								<p>We want to bring an unheard-of, TED-like level of quality to tech conferences.</p>
+								<p>Ever been to an average conference with 6 parallel sessions and unprepared speakers? Did you spend the day (or the week!) on your laptop doing something else?</p>
+								<p>If so, you understand the need for a reboot.</p>
+								<p>We will bring you the best speakers in their fields. Invite them on the best stages Paris has to offer. Make you enjoy tech conferences like you never did!</p>
 							</div>
 						</div>
 					</div>
