Tickets, cap, next and title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 		<div id="particles-js">
 			<div class="container">
 				<div class="row">
-					<div class="col s12 m3">
+					<div class="col s12 m2"></div>
+					<div class="col s12 m8">
+						<h1 id="family">ScaleConf Family</h1>
+					</div>
+					<div class="col s12 m2"></div>
+				</div>
+				<div class="row">
+					<div class="col s12 m4">
 						<div class="card hoverable">
 							<div class="card-image waves-effect waves-block waves-light">
 								<img class="activator" src="images/colombia.png">
@@ -25,6 +32,9 @@
 										<i class="fa fa-plus" aria-hidden="true"></i>
 									</a>
 								</span>
+								<p class="on-sale">Tickets on sale <a href="/">link</a></p>
+								<p class="cfp">Apply to cfp <a href="/">link</a></p>
+								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
 									<a href="http://scaleconfco.com/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
 									<a href="https://twitter.com/scaleconfco"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
@@ -43,7 +53,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col s12 m3">
+					<div class="col s12 m4">
 						<div class="card hoverable">
 							<div class="card-image waves-effect waves-block waves-light">
 								<img class="activator" src="images/south_africa.png">
@@ -55,6 +65,9 @@
 										<i class="fa fa-plus" aria-hidden="true"></i>
 									</a>
 								</span>
+								<p class="on-sale">Tickets on sale <a href="/">link</a></p>
+								<p class="cfp">Apply to cfp <a href="/">link</a></p>
+								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
 									<a href="http://scaleconf.org/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
 									<a href="https://twitter.com/scaleconf"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
@@ -73,7 +86,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col s12 m3">
+					<div class="col s12 m4">
 						<div class="card hoverable">
 							<div class="card-image waves-effect waves-block waves-light">
 								<img class="activator" src="images/new_zealand.png">
@@ -85,6 +98,9 @@
 										<i class="fa fa-plus" aria-hidden="true"></i>
 									</a>
 								</span>
+								<p class="on-sale">Tickets on sale <a href="/">link</a></p>
+								<p class="cfp">Apply to cfp <a href="/">link</a></p>
+								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
 									<a href="http://scaleconf.co.nz/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
 									<a href="https://twitter.com/sconfnz"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
@@ -102,7 +118,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col s12 m3">
+				</div>
+				<div class="row">
+					<div class="col s12 m4"></div>
+					<div class="col s12 m4">
 						<div class="card hoverable">
 							<div class="card-image waves-effect waves-block waves-light">
 								<img class="activator" src="images/dot.png">
@@ -114,6 +133,9 @@
 										<i class="fa fa-plus" aria-hidden="true"></i>
 									</a>
 								</span>
+								<p class="on-sale">Tickets on sale <a href="/">link</a></p>
+								<p class="cfp">Apply to cfp <a href="/">link</a></p>
+								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
 									<a href="https://www.dotscale.io/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
 									<a href="https://twitter.com/dotScale"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
@@ -134,6 +156,14 @@
 							</div>
 						</div>
 					</div>
+					<div class="col s12 m4"></div>
+				</div>
+				<div class="row">
+					<div class="col s12 m1"></div>
+					<div class="col s12 m10">
+						<p>ScaleConf is ... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacus felis, aliquet in est a, laoreet sodales ipsum. Curabitur ullamcorper maximus erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc bibendum enim vel hendrerit convallis. Donec justo dui, iaculis eu dignissim sed, congue vel augue. Vestibulum convallis justo at enim efficitur imperdiet. Fusce condimentum et nisl sit amet sodales. Proin feugiat, enim id aliquet eleifend, leo augue finibus neque, quis fringilla ligula ex eu nibh. Aliquam aliquam turpis congue risus tristique maximus. Aliquam nec ultrices eros. Nulla iaculis mi sed magna cursus, congue ornare nibh congue. </p>
+					</div>
+					<div class="col s12 m1"></div>
 				</div>
 			</div>
 		</div>
