icon cfp, tickets

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
 										<i class="fa fa-plus" aria-hidden="true"></i>
 									</a>
 								</span>
-								<p class="on-sale">Tickets on sale <a href="/">link</a></p>
-								<p class="cfp">Apply to cfp <a href="/">link</a></p>
+								<div class="cfp">
+									<a href="/"><img src="images/cfp.png" alt="cfp"></a>
+								</div>
+								<div class="on-sale">
+									<a href="/"><img src="images/tickets.png" alt="tickets"></a>
+								</div>
 								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
 									<a href="http://scaleconfco.com/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
@@ -65,8 +69,12 @@
 										<i class="fa fa-plus" aria-hidden="true"></i>
 									</a>
 								</span>
-								<p class="on-sale">Tickets on sale <a href="/">link</a></p>
-								<p class="cfp">Apply to cfp <a href="/">link</a></p>
+								<div class="cfp">
+									<a href="/"><img src="images/cfp.png" alt="cfp"></a>
+								</div>
+								<div class="on-sale">
+									<a href="/"><img src="images/tickets.png" alt="tickets"></a>
+								</div>
 								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
 									<a href="http://scaleconf.org/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
@@ -98,8 +106,12 @@
 										<i class="fa fa-plus" aria-hidden="true"></i>
 									</a>
 								</span>
-								<p class="on-sale">Tickets on sale <a href="/">link</a></p>
-								<p class="cfp">Apply to cfp <a href="/">link</a></p>
+								<div class="cfp">
+									<a href="/"><img src="images/cfp.png" alt="cfp"></a>
+								</div>
+								<div class="on-sale">
+									<a href="/"><img src="images/tickets.png" alt="tickets"></a>
+								</div>
 								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
 									<a href="http://scaleconf.co.nz/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
@@ -133,8 +145,12 @@
 										<i class="fa fa-plus" aria-hidden="true"></i>
 									</a>
 								</span>
-								<p class="on-sale">Tickets on sale <a href="/">link</a></p>
-								<p class="cfp">Apply to cfp <a href="/">link</a></p>
+								<div class="cfp">
+									<a href="/"><img src="images/cfp.png" alt="cfp"></a>
+								</div>
+								<div class="on-sale">
+									<a href="/"><img src="images/tickets.png" alt="tickets"></a>
+								</div>
 								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
 									<a href="https://www.dotscale.io/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
