--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 									</a>
 								</span>
 								<div class="cfp">
-									<a href="/"><img src="images/cfp.png" alt="cfp"></a>
+									<a href="/">CFP is open</a>
 								</div>
 								<div class="on-sale">
-									<a href="/"><img src="images/tickets.png" alt="tickets"></a>
+									<a href="/">Tickets on sale</a>
 								</div>
 								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
@@ -70,10 +70,10 @@
 									</a>
 								</span>
 								<div class="cfp">
-									<a href="/"><img src="images/cfp.png" alt="cfp"></a>
+									<a href="/">CFP is open</a>
 								</div>
 								<div class="on-sale">
-									<a href="/"><img src="images/tickets.png" alt="tickets"></a>
+									<a href="/">Tickets on sale</a>
 								</div>
 								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
@@ -107,10 +107,10 @@
 									</a>
 								</span>
 								<div class="cfp">
-									<a href="/"><img src="images/cfp.png" alt="cfp"></a>
+									<a href="/">CFP is open</a>
 								</div>
 								<div class="on-sale">
-									<a href="/"><img src="images/tickets.png" alt="tickets"></a>
+									<a href="/">Tickets on sale</a>
 								</div>
 								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
@@ -146,10 +146,10 @@
 									</a>
 								</span>
 								<div class="cfp">
-									<a href="/"><img src="images/cfp.png" alt="cfp"></a>
+									<a href="/">CFP is open</a>
 								</div>
 								<div class="on-sale">
-									<a href="/"><img src="images/tickets.png" alt="tickets"></a>
+									<a href="/">Tickets on sale</a>
 								</div>
 								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
 								<p class="socials">
