--- a/index.html
+++ b/index.html
@@ -1,193 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+---
+
 	<head>
-		<meta charset="utf-8">
-		<title>ScaleConf.Tech</title>
-		<meta name="description" content="Scaleconf tech">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="stylesheet" media="screen, projection" href="css/materialize.min.css">
-	  	<link rel="stylesheet" href="css/font-awesome.min.css">
-	  	<link rel="stylesheet" media="screen" href="css/main.css">
+		{{ head }}
 	</head>
 	<body>
-		<div id="particles-js">
-			<div class="container">
-				<div class="row">
-					<div class="col s12 m2"></div>
-					<div class="col s12 m8">
-						<h1 id="family">ScaleConf Family</h1>
-					</div>
-					<div class="col s12 m2"></div>
-				</div>
-				<div class="row">
-					<div class="col s12 m4">
-						<div class="card hoverable">
-							<div class="card-image waves-effect waves-block waves-light">
-								<img class="activator" src="images/colombia.png">
-							</div>
-							<div class="card-content">
-								<span class="card-title activator grey-text text-darken-4">
-									<span>Colombia</span>
-									<a class="btn-floating waves-effect waves-light teal right">
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</a>
-								</span>
-								<div class="cfp">
-									<a href="/">CFP is open</a>
-								</div>
-								<div class="on-sale">
-									<a href="/">Tickets on sale</a>
-								</div>
-								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
-								<p class="socials">
-									<a href="http://scaleconfco.com/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
-									<a href="https://twitter.com/scaleconfco"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
-									<a href="https://facebook.com/scaleconfco"><i class="fa fa-facebook teal-text" aria-hidden="true"></i></a>
-								</p>
-							</div>
-							<div class="card-reveal">
-								<span class="card-title grey-text text-darken-4">
-									<span>Colombia</span>
-									<a class="btn-floating waves-effect waves-light teal right">
-										<i class="fa fa-times" aria-hidden="true"></i>
-									</a>
-								</span>
-								<p>Created by a team of active members of the sotfware community in Colombia, ScaleConf Colombia is a pioneering tech conference on scalability, DevOps and modern software tools and practices in the region.</p>
-								<p>Our main objetive is to level up the community's knowledge, by bringing great speakers from the teams that are paving the way for a global scale in tomorrow's apps and services.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col s12 m4">
-						<div class="card hoverable">
-							<div class="card-image waves-effect waves-block waves-light">
-								<img class="activator" src="images/south_africa.png">
-							</div>
-							<div class="card-content">
-								<span class="card-title activator grey-text text-darken-4">
-									<span>South Africa</span>
-									<a class="btn-floating waves-effect waves-light teal right">
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</a>
-								</span>
-								<div class="cfp">
-									<a href="/">CFP is open</a>
-								</div>
-								<div class="on-sale">
-									<a href="/">Tickets on sale</a>
-								</div>
-								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
-								<p class="socials">
-									<a href="http://scaleconf.org/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
-									<a href="https://twitter.com/scaleconf"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
-									<a href="https://www.facebook.com/scaleconf"><i class="fa fa-facebook teal-text" aria-hidden="true"></i></a>
-								</p>
-							</div>
-							<div class="card-reveal">
-								<span class="card-title grey-text text-darken-4">
-									<span>South Africa</span>
-									<a class="btn-floating waves-effect waves-light teal right">
-										<i class="fa fa-times" aria-hidden="true"></i>
-									</a>
-								</span>
-								<p>Each year ScaleConf brings international and local experts together to share their experience scaling websites and services using modern technologies and philosophies.</p>
-								<p>With a mixture of South African and international speakers, each year we bring a diversity of experience and perspective to the stage.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col s12 m4">
-						<div class="card hoverable">
-							<div class="card-image waves-effect waves-block waves-light">
-								<img class="activator" src="images/new_zealand.png">
-							</div>
-							<div class="card-content">
-								<span class="card-title activator grey-text text-darken-4">
-									<span>New Zealand</span>
-									<a class="btn-floating waves-effect waves-light teal right">
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</a>
-								</span>
-								<div class="cfp">
-									<a href="/">CFP is open</a>
-								</div>
-								<div class="on-sale">
-									<a href="/">Tickets on sale</a>
-								</div>
-								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
-								<p class="socials">
-									<a href="http://scaleconf.co.nz/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
-									<a href="https://twitter.com/sconfnz"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
-									<a href="https://www.facebook.com/scaleconfNZ/"><i class="fa fa-facebook teal-text" aria-hidden="true"></i></a>
-								</p>
-							</div>
-							<div class="card-reveal">
-								<span class="card-title grey-text text-darken-4">
-									<span>New Zealand</span>
-									<a class="btn-floating waves-effect waves-light teal right">
-										<i class="fa fa-times" aria-hidden="true"></i>
-									</a>
-								</span>
-								<p>ScaleConf New Zealand is an international technical conference for those who build or maintain web systems. Audience includes developers, engineers and managers from companies of all sizes, researchers, academics, influential business decision makers, CTOs and VPs engaged in the web development and performance ecosystem.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s12 m4"></div>
-					<div class="col s12 m4">
-						<div class="card hoverable">
-							<div class="card-image waves-effect waves-block waves-light">
-								<img class="activator" src="images/dot.png">
-							</div>
-							<div class="card-content">
-								<span class="card-title activator grey-text text-darken-4">
-									<span>DotScale</span>
-									<a class="btn-floating waves-effect waves-light teal right">
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</a>
-								</span>
-								<div class="cfp">
-									<a href="/">CFP is open</a>
-								</div>
-								<div class="on-sale">
-									<a href="/">Tickets on sale</a>
-								</div>
-								<p class="next">Next: dd/mm/yyyy <a href="/">link</a></p>
-								<p class="socials">
-									<a href="https://www.dotscale.io/"><i class="fa fa-globe teal-text" aria-hidden="true"></i></a>
-									<a href="https://twitter.com/dotScale"><i class="fa fa-twitter teal-text" aria-hidden="true"></i></a>
-								</p>
-							</div>
-							<div class="card-reveal">
-								<span class="card-title grey-text text-darken-4">
-									<span>DotScale</span>
-									<a class="btn-floating waves-effect waves-light teal right">
-										<i class="fa fa-times" aria-hidden="true"></i>
-									</a>
-								</span>
-								<p>The European Tech Conference on Scalability.</p>
-								<p>We want to bring an unheard-of, TED-like level of quality to tech conferences.</p>
-								<p>Ever been to an average conference with 6 parallel sessions and unprepared speakers? Did you spend the day (or the week!) on your laptop doing something else?</p>
-								<p>If so, you understand the need for a reboot.</p>
-								<p>We will bring you the best speakers in their fields. Invite them on the best stages Paris has to offer. Make you enjoy tech conferences like you never did!</p>
-							</div>
-						</div>
-					</div>
-					<div class="col s12 m4"></div>
-				</div>
-				<div class="row">
-					<div class="col s12 m1"></div>
-					<div class="col s12 m10">
-						<p>ScaleConf is ... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacus felis, aliquet in est a, laoreet sodales ipsum. Curabitur ullamcorper maximus erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc bibendum enim vel hendrerit convallis. Donec justo dui, iaculis eu dignissim sed, congue vel augue. Vestibulum convallis justo at enim efficitur imperdiet. Fusce condimentum et nisl sit amet sodales. Proin feugiat, enim id aliquet eleifend, leo augue finibus neque, quis fringilla ligula ex eu nibh. Aliquam aliquam turpis congue risus tristique maximus. Aliquam nec ultrices eros. Nulla iaculis mi sed magna cursus, congue ornare nibh congue. </p>
-					</div>
-					<div class="col s12 m1"></div>
-				</div>
-			</div>
-		</div>
-
-		<!-- Le Javascript -->
-		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script src="js/particles.min.js"></script>
-		<script src="js/materialize.min.js"></script>
-		<script src="js/main.js"></script>
+        {{ page }}
 	</body>
-</html>
