New header and add icons to important info

--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 layout: default
 ---
 
-	<head>
-		{{ head }}
-	</head>
-	<body>
-        {{ page }}
-	</body>
+<section class="container" id="events">
+	<div class="row">{% include events2.html %}</div>
+</section>
