Replace index to horizontal

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 ---
 
 <section class="container" id="events">
-	<div class="row">{% include events2.html %}</div>
+	<div class="row">{% include events_horizontal.html %}</div>
 </section>
